[package]
name = "taskwarrior-web-server"
version = "0.1.1"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
humantime = "2.1.0"
